Bug 1990571 - Continue traversal of a parent folder when a sub-hierarchy fails. r=tobyp

Differential Revision: https://phabricator.services.mozilla.com/D273604

--HG--
extra : amend_source : 74d9eff1794cdd17a1732ba783c8d3a4bf443a67